# cab_kinova

cab/: cam.py  read.py  亚像素点计算方法.md
opencv_aruco/: CMakeLists.txt  env.sh  introduce.md
opencv_aruco/doc/: PTSU阈值化详解.md  introduce.md
opencv_aruco/example/: create_marker.cpp  hello_exampled.cpp  rc_example.cpp
opencv_aruco/include/: realscene_cam_opt.hpp
opencv_aruco/install/include/: realscene_cam_opt.hpp
opencv_aruco/src/: CMakeLists.txt  PoseMarker.cpp  createMarker.cpp  detectMarker.cpp  hello_exampled.cpp  rc_example.cpp  realscene_cam_opt.cpp  realsenceIntrintics.cpp
save/: csv.txt  kinovaH2E.npy
save/r/: r_0.npy  r_1.npy  r_10.npy  r_2.npy  r_3.npy  r_4.npy  r_5.npy  r_6.npy  r_7.npy  r_8.npy  r_9.npy
save/t/: t_0.npy  t_1.npy  t_10.npy  t_2.npy  t_3.npy  t_4.npy  t_5.npy  t_6.npy  t_7.npy  t_8.npy  t_9.npy
script/: realtext.py
src/: cab_flexiv copy.py  cab_point.py  cam.py
